// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditorToolbar > should render normal save button 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-1yt65gw"
        >
          editor.editorToolbar.unsavedChanges
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <div>
          <div
            class="css-17i13bz"
          >
            <span
              aria-disabled="false"
              aria-expanded="false"
              aria-haspopup="true"
              class="css-mga6jx"
              role="button"
              tabindex="0"
            >
              editor.editorToolbar.publish
            </span>
          </div>
        </div>
        <div>
          <button
            class="css-k9tzai"
          >
            editor.editorToolbar.deleteEntry
          </button>
        </div>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render normal save button 2`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-1yt65gw"
        >
          editor.editorToolbar.unsavedChanges
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <div>
          <div
            class="css-17i13bz"
          >
            <span
              aria-disabled="false"
              aria-expanded="false"
              aria-haspopup="true"
              class="css-mga6jx"
              role="button"
              tabindex="0"
            >
              editor.editorToolbar.publish
            </span>
          </div>
        </div>
        <div>
          <button
            class="css-k9tzai"
          >
            editor.editorToolbar.deleteEntry
          </button>
        </div>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with default props 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-12yewje"
        >
          editor.editorToolbar.published
        </button>
        <div>
          <button
            class="css-k9tzai"
          >
            editor.editorToolbar.deleteEntry
          </button>
        </div>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with status=draft,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <div
          class="css-17i13bz"
        >
          <span
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            class="css-mzpznu"
            role="button"
            tabindex="0"
          >
            editor.editorToolbar.status
          </span>
        </div>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deletePublishedEntry
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with status=draft,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <div
          class="css-17i13bz"
        >
          <span
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            class="css-mzpznu"
            role="button"
            tabindex="0"
          >
            editor.editorToolbar.status
          </span>
        </div>
        <div
          class="css-cssveg"
        >
          <div
            class="css-vhophh"
          >
            <span
              class="tooltip css-1xzgr2e"
            >
              <svg
                class="bi bi-info-circle"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
                />
                <path
                  d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                />
              </svg>
            </span>
          </div>
          <div
            class="css-xhodm2"
          >
            editor.editorToolbar.statusInfoTooltipDraft
          </div>
        </div>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with status=pending_publish,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <div
          class="css-17i13bz"
        >
          <span
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            class="css-mzpznu"
            role="button"
            tabindex="0"
          >
            editor.editorToolbar.status
          </span>
        </div>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deletePublishedEntry
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with status=pending_publish,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <div
          class="css-17i13bz"
        >
          <span
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            class="css-mzpznu"
            role="button"
            tabindex="0"
          >
            editor.editorToolbar.status
          </span>
        </div>
        <div
          class="css-cssveg"
        >
          <div
            class="css-vhophh"
          >
            <span
              class="tooltip css-1xzgr2e"
            >
              <svg
                class="bi bi-info-circle"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
                />
                <path
                  d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with status=pending_review,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <div
          class="css-17i13bz"
        >
          <span
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            class="css-mzpznu"
            role="button"
            tabindex="0"
          >
            editor.editorToolbar.status
          </span>
        </div>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deletePublishedEntry
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with status=pending_review,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <div
          class="css-17i13bz"
        >
          <span
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            class="css-mzpznu"
            role="button"
            tabindex="0"
          >
            editor.editorToolbar.status
          </span>
        </div>
        <div
          class="css-cssveg"
        >
          <div
            class="css-vhophh"
          >
            <span
              class="tooltip css-1xzgr2e"
            >
              <svg
                class="bi bi-info-circle"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
                />
                <path
                  d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                />
              </svg>
            </span>
          </div>
          <div
            class="css-xhodm2"
          >
            editor.editorToolbar.statusInfoTooltipInReview
          </div>
        </div>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with workflow controls hasUnpublishedChanges=false,isNewEntry=false,isModification=false,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deletePublishedEntry
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with workflow controls hasUnpublishedChanges=false,isNewEntry=false,isModification=false,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=false,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deleteUnpublishedEntry
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=false,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deleteUnpublishedEntry
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=true,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deleteUnpublishedChanges
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=true,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  <div
    class="css-137i05p"
  >
    <mock-link
      class="css-1n6fubc"
      to=""
    >
      <div
        class="css-eummnz"
      >
        ←
      </div>
      <div>
        <div
          class="css-1ovx7w3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="css-10b2kd6"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="css-u4ugap"
    >
      <div
        class="css-1sg2lsz"
      >
        <button
          class="css-jne1vc"
          disabled=""
        >
          editor.editorToolbar.save
        </button>
        <button
          class="css-k9tzai"
        >
          editor.editorToolbar.deleteUnpublishedChanges
        </button>
      </div>
      <div
        class="css-100g3b9"
      />
    </div>
    <div
      class="css-1c15xun"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;
